--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ plot(Discharge ~ Stage)
 ```
 
 ```{r rateOptimise}
-# Optimise rating with a control point at 1.6m
+# Optimise rating with a control points at 1.6m and 2.3m
 rateOptim <- rateOptimise(Discharge, Stage, control = c(1.6, 2.3))
 rateOptim
 ```
